finish working mvp with 1 image (unrefactored)

--- a/notebooks/mvp.ipynb
+++ b/notebooks/mvp.ipynb
@@ -105,7 +105,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Creating the Learner"
+    "## Creating the DataBunch Step by Step"
    ]
   },
   {
@@ -117,13 +117,18 @@
     "bs = 16\n",
     "size = 160\n",
     "\n",
-    "data = (ImageList.from_folder(DATA_PATH)\n",
-    "        .use_partial_data(0.01)\n",
-    "        .split_none()\n",
-    "        .label_from_folder()\n",
-    "        .transform(size=size)\n",
-    "        .databunch(bs=bs, num_workers=0)\n",
-    "        .normalize(imagenet_stats))\n",
+    "data = (ImageList.from_folder(DATA_PATH)  # -> ImageList\n",
+    "        .use_partial_data(0.01, seed=42)  # -> ImageList\n",
+    "        .split_none()                     # -> ItemLists: train and valid ItemList\n",
+    "        .label_from_folder()              # -> LabelLists: train and valid LabelList\n",
+    "        .transform(size=size)             # -> LabelLists: train and valid LabelList\n",
+    "        .databunch(bs=bs, num_workers=0)  # -> ImageDataBunch\n",
+    "        .normalize(imagenet_stats))       # -> ImageDataBunch\n",
+    "\n",
+    "# note that we need to make sure that data in the dataloader is not shuffled\n",
+    "# solution for turning off shuffle in data block API is here:\n",
+    "# https://forums.fast.ai/t/how-can-i-turn-off-shuffle-in-the-data-block/33942/2?u=maxim.pechyonkin\n",
+    "data.train_dl = data.train_dl.new(shuffle=False)\n",
     "\n",
     "data.show_batch(rows=4, figsize=(8,8))"
    ]
@@ -151,6 +156,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Creating the Learner\n",
     "## Registering Callback by Hand"
    ]
   },
@@ -160,25 +166,153 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class TestHook(HookCallback):\n",
-    "    def hook(self, m, i, o):\n",
-    "        pass\n",
-    "    def on_batch_end(self, train, **kwargs):\n",
-    "        print(\"Batch Done!\")     \n",
+    "activations = []\n",
     "        \n",
+    "def printer(module, i, o):\n",
+    "    activations.append(o)\n",
+    "\n",
     "learner = cnn_learner(data, models.resnet18)\n",
     "\n",
-    "test_hook_callback = TestHook(learner)\n",
-    "learner.callbacks += [test_hook_callback]\n",
+    "print(\"training:\", learner.model.training)\n",
     "\n",
-    "learner.get_preds(data.train_ds)"
+    "last_layer = flatten_model(learner.model)[-2]\n",
+    "last_layer.register_forward_hook(printer)\n",
+    "\n",
+    "# learner.fit_one_cycle(1)\n",
+    "preds = learner.get_preds(data.train_ds)\n",
+    "\n",
+    "print(\"training:\", learner.model.training)\n",
+    "\n",
+    "data_activations = torch.cat(activations)"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "---"
+    "query_img = data.train_ds[0][0]\n",
+    "query_img"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "activations = []\n",
+    "learner.predict(query_img)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query_act = activations[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query_act.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_activations.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query_act.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# finding distances from query to all \n",
+    "closest_idxs = (data_activations - query_act).pow(2).sum(dim=1).argsort()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sorted_ds = data.train_ds[closest_idxs]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sorted_ds[0][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query_img"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sorted_ds[1][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sorted_ds[2][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sorted_ds[3][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sorted_ds[4][0]"
    ]
   },
   {
