finish mvp exploration notebook

--- a/notebooks/mvp.ipynb
+++ b/notebooks/mvp.ipynb
@@ -50,10 +50,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pathlib import Path\n",
     "from fastai.vision import *\n",
     "from fastai.metrics import accuracy\n",
-    "from fastai.callbacks.hooks import *"
+    "from fastai.callbacks.hooks import *\n",
+    "\n",
+    "DATA_PATH = '../data/raw/imagenette-160'\n",
+    "GET_DATA_PATH = '../src/data/get_imagenette.py'\n",
+    "\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2"
    ]
   },
   {
@@ -62,8 +67,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "DATA_PATH = '../data/raw/imagenette-160'\n",
-    "GET_DATA_PATH = '../src/data/get_imagenette.py'"
+    "# !python '../src/usecases/mvp.py'"
    ]
   },
   {
@@ -106,6 +110,25 @@
    "metadata": {},
    "source": [
     "## Creating the DataBunch Step by Step"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def make_data(data_path:PathOrStr, bs:int=16, img_size:int=160, \n",
+    "              pct_partial:float=1.0, num_workers:int=0)->ImageDataBunch:\n",
+    "    return (ImageList.from_folder(data_path)         # -> ImageList\n",
+    "            .use_partial_data(pct_partial, seed=42)  # -> ImageList\n",
+    "            .split_none()                            # -> ItemLists: train and valid ItemList\n",
+    "            .label_from_folder()                     # -> LabelLists: train and valid LabelList\n",
+    "            .transform(size=img_size)                # -> LabelLists: train and valid LabelList\n",
+    "            .databunch(bs=bs, num_workers=0)         # -> ImageDataBunch\n",
+    "            .normalize(imagenet_stats))              # -> ImageDataBunch\n",
+    "\n",
+    "data = make_data(DATA_PATH)"
    ]
   },
   {
