NOTEBOOKS: refactor imports and getting data function
- import VisualSearchEngine directly from sjaandi
- rename `data_for_activations` to `get_data`

--- a/notebooks/refactored_mvp.ipynb
+++ b/notebooks/refactored_mvp.ipynb
@@ -13,6 +13,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from sjaandi import VisualSearchEngineearchEngine"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from src.usecases.mvp import *\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
@@ -44,7 +53,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = data_for_activations(DATA_PATH, pct_partial=0.01)"
+    "data = get_data(DATA_PATH, pct_partial=0.01)"
    ]
   },
   {
@@ -91,7 +100,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = data_for_activations(DATA_PATH, pct_partial=1.00)\n",
+    "data = get_data(DATA_PATH, pct_partial=1.00)\n",
     "engine = VisualSearchEngine(data)\n",
     "query_img = data.train_ds[0][0]\n",
     "closest = engine.find_closest_images(query_img)\n",
